update skor mingguan

--- a/main.tex
+++ b/main.tex
@@ -6,6 +6,8 @@
 \usepackage{amssymb}
 \usepackage{multirow}
 \usepackage{graphicx}
+\usepackage[normalem]{ulem}
+\useunder{\uline}{\ul}{}
 
 %input macros (i.e. write your own macros file called mymacros.tex
 %and uncomment the next line)
