--- a/section/chapter6.tex
+++ b/section/chapter6.tex
@@ -1,60 +1,114 @@
 \chapter{Syarah Fauziatul Ulya/1144075}
-\begin{table}[h]
-\caption{Tabel Kegiatan Harian}
-\centering
-\begin{tabular}{|c|c|c|}
+
+\section{Laporan Harian}
+
+% Please add the following required packages to your document preamble:
+% \usepackage[normalem]{ulem}
+% \useunder{\uline}{\ul}{}
+\begin{table}[]
+\caption{Laporan Harian Tanggal 25 Februari 2018}
+\label{tab:lh250219}
+\begin{tabular}{|l|l|l|}
 \hline
-No&Tanggal&Kegiatan\\
-\hline
-1.&\multirow{2}{*}{25-02-2019}&1) Membuat repositori Modul Praktikum kelas Pemrograman III.\\
-&&2) Menginstal python, pip, anaconda, dan jupiter dari kursus Udemy.\\
-\hline
-2.&\multirow{2}{*}{26-02-2019}&1) Membuat repositori Modul Praktikum kelas Kecerdasan Buatan.\\
-&&2) Mendata dan menilai tugas 1 kelas 2A- Pemrograman III.\\
-&&3) Membimbing anak kelas 3C untuk tugas Kecerdasan Buatan.\\
-\hline
-3.&\multirow{2}{*}{27-02-2019}&1) Mendata dan menilai tugas kelas 3C-Kecerdasan Buatan.\\
-&&2) Membimbing anak kelas 3C untuk tugas Kecerdasan Buatan.\\
-&&3) Mengkoordinasi tugas kontribusi anak kelas.\\
-\hline
+\textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
+1 & Dedikasi & - \\ \hline
+2 & Produktifitas & \begin{tabular}[c]{@{}l@{}}a. Membuat repositori Modul Praktikum kelas Pemrograman III\\     Kelas 2A, 2B, dan 2C di organisasi pemograman-iii.\end{tabular} \\
+ &  & b. Mengintal python, pip, anaconda, dan jupiter dari Udemy. \\
+ &  & \begin{tabular}[c]{@{}l@{}}c. Melakukan merge pull request di pemograman-iii/praktikum\_2a,\\    dari \#1, \#3, \#4, \#7, \#8, \#9, \#10, \#12, \#13, dan \#14.\end{tabular} \\ \hline
+3 & Integritas & able to merge/has no conflict \\ \hline
+4 & Disiplin & Jam Datang : 07.07 WIB \\
+ &  & Jam Pulang : 16.20 WIB \\ \hline
+5 & Loyalitas & \begin{tabular}[c]{@{}l@{}}Membersihkan dan merapihkan meja kerja, dan mengecek AC\\ di pagi dan sore hari.\end{tabular} \\ \hline
 \end{tabular}
-\label{table:contoh}
+\end{table}
+
+% Please add the following required packages to your document preamble:
+% \usepackage[normalem]{ulem}
+% \useunder{\uline}{\ul}{}
+\begin{table}[]
+\caption{Laporan Harian Tanggal 26 Februari 2018}
+\label{tab:lh260219}
+\begin{tabular}{|l|l|l|}
+\hline
+\textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
+1 & Dedikasi & - \\ \hline
+2 & Produktifitas & a. Membuat repositori Modul Praktikum kelas Kecerdasan Buatan. \\
+ &  & b. Mendata dan menilai tugas 1 kelas 2A-Pemrograman III. \\
+ &  & \begin{tabular}[c]{@{}l@{}}c. Membimbing Fadila, Lusia, dan Rahmi Roza kelas 3C untuk \\     tugas Kecerdasan Buatan.\end{tabular} \\ \hline
+3 & Integritas & able to merge/has no conflict \\ \hline
+4 & Disiplin & Jam Datang : 08.30 WIB \\
+ &  & Jam Pulang : 16.30 WIB \\ \hline
+5 & Loyalitas & \begin{tabular}[c]{@{}l@{}}Membersihkan dan merapihkan meja kerja, dan mengecek AC\\ di pagi dan sore hari.\end{tabular} \\ \hline
+\end{tabular}
 \end{table}
 
 \begin{table}[]
-\caption{Tabel Laporan Harian (Kamis, 28 Februari 2018)}
-\resizebox{\textwidth}{!}{%
+\caption{Laporan Harian Tanggal 27 Februari 2019}
+\label{tab:lh270219}
+\begin{tabular}{|l|l|l|}
+\hline
+\textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
+1 & Dedikasi & bukuinformatika/flask \#10 \\ \hline
+2 & Produktifitas & a.Mendata dan menilai tugas kelas 3C-Kecerdasan Buatan. \\
+ &  & b.Membimbing anak kelas 3C untuk tugas Kecerdasan Buatan. \\
+ &  & c. Mengkoordinasi tugas kontribusi anak kelas. \\ \hline
+3 & Integritas & able to merge/has no conflict \\ \hline
+4 & Disiplin & Jam Datang : 08.50 WIB \\
+ &  & Jam Pulang : 17.30 WIB \\ \hline
+5 & Loyalitas & \begin{tabular}[c]{@{}l@{}}Membersihkan dan merapihkan meja kerja, dan mengecek AC\\ di pagi dan sore hari.\end{tabular} \\ \hline
+\end{tabular}
+\end{table}
+
+\begin{table}[]
+\caption{Laporan Harian Tanggal 28 Februari 2019}
+\label{tab:lh280219}
 \begin{tabular}{|l|l|l|}
 \hline
 \textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
 1 & Dedikasi & BukuInformatika/flask \#12 \\ \hline
-2 & Produktifitas & \begin{tabular}[c]{@{}l@{}}a. Evaluasi mingguan dan sosialisasi format baru penilaian \\ peserta internship II di IRC dan Prodi.\end{tabular} \\
- &  & \begin{tabular}[c]{@{}l@{}}b. Memeriksa lembar jawaban UAS GIS kelas 3C dan Arkom \\ kelas 1C. \end{tabular}\\
- &  & \begin{tabular}[c]{@{}l@{}}c. Menginput nilai UAS kelas 1C, 3A, 3B, dan 3C di google\\ docs. \end{tabular} \\
- &  & \begin{tabular}[c]{@{}l@{}l@{}}d. Mengkoordinir mahasiswa untuk tugas kontribusi\\ pembuatan cover, pencetakan, sampai pendistribusian buku \\di Grup Whatsapp.\end{tabular} \\
- &  & \begin{tabular}[c]{@{}l@{}l@{}}e. Memeriksa tugas kecerdasan buatan kelas 3C serta meng-\\input nilai ke google docs atas nama Fadila, Lusia Violita \\Aprilian, dan Rahmi Roza.\end{tabular} \\ \hline
+2 & Produktifitas & \begin{tabular}[c]{@{}l@{}}a. Evaluasi mingguan dan sosialisasi format baru penilaian peserta\\     internship II di IRC dan Prodi.\end{tabular} \\
+ &  & \begin{tabular}[c]{@{}l@{}}b. Memeriksa lembar jawaban UAS GIS kelas 3C dan Arkom\\     kelas 1C.\end{tabular} \\
+ &  & c. Menginput nilai UAS kelas 1C, 3A, 3B, dan 3C di google docs. \\
+ &  & \begin{tabular}[c]{@{}l@{}}d. Mengkoordinir mahasiswa untuk tugas kontribusi pembuatan cover,\\     pencetakan, sampai pendistribusian buku di Grup Whatsapp.\end{tabular} \\
+ &  & \begin{tabular}[c]{@{}l@{}}e. Memeriksa tugas kecerdasan buatan kelas 3C serta menginput nilai\\     ke google docs atas nama Fadila, Lusia Violita Aprilian, dan Rahmi.\end{tabular} \\ \hline
 3 & Integritas & able to merge/has no conflict \\ \hline
 4 & Disiplin & Jam Datang : 07.55 WIB \\
  &  & Jam Pulang : 17.00 WIB \\ \hline
-5 & Loyalitas & \begin{tabular}[c]{@{}l@{}}Menyapu, membersihkan dan merapihkan meja, mencuci\\ gelas nomor 6, dan mengecek AC di pagi dan sore hari.\end{tabular} \\ \hline
-\end{tabular}%
-}
+5 & Loyalitas & \begin{tabular}[c]{@{}l@{}}Menyapu, membersihkan dan merapihkan meja, mencuci gelas nomor 6,\\ dan mengecek AC di pagi dan sore hari.\end{tabular} \\ \hline
+\end{tabular}
 \end{table}
 
 \begin{table}[]
-\caption{Tabel Laporan Harian (Kamis, 28 Februari 2018)}
-\resizebox{\textwidth}{!}{%
+\caption{Laporan Harian Tanggal 1 Maret 2019}
+\label{tab:lh010319}
 \begin{tabular}{|l|l|l|}
 \hline
 \textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
 1 & Dedikasi &  \\ \hline
-2 & Produktifitas & \begin{tabular}[c]{@{}l@{}}a. Mengerjakan Soal Toefl Pre-Test 2 (Computer Based)\\Skor Toefl: 55\end{tabular} \\
- &  & \begin{tabular}[c]{@{}l@{}}b. Mendata skor toefl peserta Internship II di IRC.\end{tabular}\\
- &  & \begin{tabular}[c]{@{}l@{}}c. Memeriksa pull request di laporanirc/2019 \end{tabular}\\ \\ \hline
+2 & Produktifitas & \begin{tabular}[c]{@{}l@{}}a. Mengerjakan Soal Toefl Pre-Test 2 (Computer Based)\\     Skor Toefl: 55\end{tabular} \\
+ &  & b. Mendata skor toefl peserta Internship II di IRC. \\
+ &  & c. Memeriksa pull request di laporanirc/2019. \\ \hline
 3 & Integritas & able to merge/has no conflict \\ \hline
 4 & Disiplin & Jam Datang : 07.39 WIB \\
  &  & Jam Pulang : 14.20 WIB \\ \hline
-5 & Loyalitas & \begin{tabular}[c]{@{}l@{}}Menyapu, membersihkan dan merapihkan meja, membeli\\ sabun dan spons cuci piring, dan mengecek AC\\ di pagi dan sore hari.\end{tabular} \\ \hline
-\end{tabular}%
-}
+5 & Loyalitas & \begin{tabular}[c]{@{}l@{}}Menyapu, membersihkan dan merapihkan meja, membeli\\ sabun dan spons cuci piring, dan mengecek AC di pagi\\ dan sore hari.\end{tabular} \\ \hline
+\end{tabular}
+\end{table}
+
+\section{Penilaian Mingguan}
+
+\begin{table}[h]
+\centering
+\caption{Nilai Minggu ke-1}
+\label{tab:nm01}
+\begin{tabular}{|c|c|c|}
+\hline
+\textbf{No} & \textbf{Kategori} & \textbf{Poin} \\ \hline
+1 & Dedikasi & 1 \\ \hline
+2 & Produktifitas & 3 \\ \hline
+3 & Integritas & 3 \\ \hline
+4 & Disiplin & 3 \\ \hline
+5 & Loyalitas & 3 \\ \hline
+ & \textbf{Total Poin} & 13 \\ \hline
+\end{tabular}
 \end{table}
