--- a/section/chapter6.tex
+++ b/section/chapter6.tex
@@ -2,6 +2,8 @@
 
 \section{Laporan Harian}
 
+\subsection{Laporan Harian Pekan ke-1}
+
 % Please add the following required packages to your document preamble:
 % \usepackage[normalem]{ulem}
 % \useunder{\uline}{\ul}{}
@@ -95,7 +97,29 @@
 \end{tabular}
 \end{table}
 
+\subsection{Laporan Harian Pekan ke-2}
+
+\begin{table}[]
+\caption{Laporan Harian Tanggal 4 Maret 2019}
+\label{tab:lh040319}
+\begin{tabular}{|l|l|l|}
+\hline
+\textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
+1 & Dedikasi & BukuInformatika/flask \#14 \\ \hline
+2 & Produktifitas & a. Diskusi Modul PPK dan teknis Github untuk Internship II\\
+ &  & b. Mengkoordinasi pengumpulan Tugas Resume Buku GIS kelas 3B dan 3C. \\
+ &  & c. Menambahkan informasi di BukuInformatika/PPK \#3 dan \#6. \\ \hline
+3 & Integritas & able to merge/has no conflict \\ \hline
+4 & Disiplin & Jam Datang : 08.45 WIB \\
+ &  & Jam Pulang : 17.00 WIB \\ \hline
+5 & Loyalitas & \begin{tabular}[c]{@{}l@{}}Menyapu, membersihkan dan merapihkan meja,\\ juga mengecek AC di pagi dan sore hari.\end{tabular} \\ \hline
+\end{tabular}
+\end{table}
+
+
 \section{Penilaian Mingguan}
+
+\subsection{Penilaian Mingguan Pekan ke-1}
 
 \begin{table}[h]
 \centering
@@ -104,11 +128,29 @@
 \begin{tabular}{|c|c|c|}
 \hline
 \textbf{No} & \textbf{Kategori} & \textbf{Poin} \\ \hline
-1 & Dedikasi & 1 \\ \hline
-2 & Produktifitas & 3 \\ \hline
-3 & Integritas & 3 \\ \hline
-4 & Disiplin & 3 \\ \hline
-5 & Loyalitas & 3 \\ \hline
+1. & Dedikasi & 1 \\ \hline
+2. & Produktifitas & 3 \\ \hline
+3. & Integritas & 3 \\ \hline
+4. & Disiplin & 3 \\ \hline
+5. & Loyalitas & 3 \\ \hline
  & \textbf{Total Poin} & 13 \\ \hline
+\end{tabular}
+\end{table}
+
+\subsection{Penilaian Mingguan Pekan ke-2}
+
+\begin{table}[h]
+\centering
+\caption{Nilai Minggu ke-2 (Update 4/3/2019)}
+\label{tab:nm02}
+\begin{tabular}{|c|c|c|}
+\hline
+\textbf{No} & \textbf{Kategori} & \textbf{Poin} \\ \hline
+1. & Dedikasi & 1 \\ \hline
+2. & Produktifitas & 1 \\ \hline
+3. & Integritas & 1 \\ \hline
+4. & Disiplin & 1 \\ \hline
+5. & Loyalitas & 1 \\ \hline
+ & \textbf{Total Poin} & 5 \\ \hline
 \end{tabular}
 \end{table}
