--- a/section/chapter4.tex
+++ b/section/chapter4.tex
@@ -1,5 +1,4 @@
-\chapter{Khalid Ahmad Khadafi/1144003}
-
+\chapter{Khalid Ahmad khadafi/1144003}
 \begin{table}[h]
 \caption{Tabel Kegiatan Harian}
 \centering
@@ -7,12 +6,31 @@
 \hline
 No&Tanggal&Kegiatan\\
 \hline
-1.&\multirow{2}{*}{02-28-2019}&1) Membuat Repositori Pratikum.\\
-&&2) menginput nilai kelas 2c.\\
+1.&\multirow{2}{*}{04-03-2019}&1) Masuk Kelas 2c Pemprograman 3 web service Phyton.\\
+&&2) Memasukan nilai Ai.\\
 \hline
-2.&\multirow{2}{*}{02-26-2019}&1) Evaluasi mingguan di prodi.\\
-&&2)Meriksa UTS kelas 3C.\\
+2.&\multirow{2}{*}{26-02-2019}&1) memperbaiki laporan intership1.\\
+&&2) Mendata dan menilai tugas 1 kelas 2A- Pemrograman III.\\
+&&3) Membimbing anak kelas 3C untuk tugas Kecerdasan Buatan.\\
 \hline
+3.&\multirow{2}{*}{27-02-2019}&1) Mendata dan menilai tugas kelas 3C-Kecerdasan Buatan.\\
+&&2) Membimbing anak kelas 3C untuk tugas Kecerdasan Buatan.\\
+&&3) Mengkoordinasi tugas kontribusi anak kelas.\\
+\hline
+\end{tabular}
+\label{table:contoh}
+\end{table}
+
+\begin{table}[]
+\caption{Tabel Kegiatan Harian 04-03-2019}
+\begin{tabular}{|l|l|l|}
+\hline
+no & kategori    & keterangan                                                                \\ \hline
+1  & dedikasi    & jarkom \#16                                                               \\ \hline
+2  & produktif   & Masuk Kelas 2c Pemprograman 3 web service Phyton                          \\ \hline
+3  & intergritas & able to merge                                                             \\ \hline
+4  & disiplin    & \begin{tabular}[c]{@{}l@{}}masuk jam 08:15\\ pulang jam:5:18\end{tabular} \\ \hline
+5  & loyalitas   & merapihkan kursi                                                          \\ \hline
 \end{tabular}
 \label{table:contoh}
 \end{table}
