--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -1,12 +1,12 @@
 \chapter{Dzikri Ahmad Ghifari}
-
-\textbf{Tugas Harian tanggal 17/01/2019}
+\begin{enumerate}
+\item \textbf{Tugas Harian tanggal 17/01/2019}
 \begin{enumerate}
 \item Membersihkan ruang IRC
 \item Diskusi mengenai penataan ulang ruang IRC
 \end{enumerate}
 
-\textbf{Tugas Harian tanggal 18/01/2019}
+\item \textbf{Tugas Harian tanggal 18/01/2019}
 \begin{enumerate}
 \item Membersihkan ruang IRC
 \item Diskusi mengenai rancangan ruang IRC
@@ -14,41 +14,41 @@
 \item Membuat artikel untuk bahan majalah D4 TI
 \end{enumerate}
 
-\textbf{Tugas Harian tanggal 21/01/2019}
+\item \textbf{Tugas Harian tanggal 21/01/2019}
 \begin{enumerate}
 \item Mencari artikel untuk bahan majalah
 \item Diskusi tentang perancangan ruang sidang di IRC
 \end{enumerate}
 
-\textbf{Tugas Harian tanggal 30/02/2019}
+\item \textbf{Tugas Harian tanggal 30/02/2019}
 \begin{enumerate}
 \item Mendata buku yang akan dipindahkan ke IRC
 \end{enumerate}
 
-\textbf{Tugas Harian tanggal 31/01/2019}
+\item \textbf{Tugas Harian tanggal 31/01/2019}
 \begin{enumerate}
 \item Memberi label pada buku untuk IRC
 \item Memindahkan buku sumbangan ke IRC
 \end{enumerate}
 
-\textbf{Tugas Harian tanggal 01/02/2019}
+\item \textbf{Tugas Harian tanggal 01/02/2019}
 \begin{enumerate}
 \item Praktek github dengan Pak Rolly Maulana Awangga 
 \end{enumerate}
 
-\textbf{Tugas Harian tanggal 06/02/2019}
+\item \textbf{Tugas Harian tanggal 06/02/2019}
 \begin{enumerate}
 \item Membuat video pesan, kesan dan kritik untuk IRC
 \end{enumerate}
 
-\textbf{Tugas Harian tanggal 18/02/2019}
+\item \textbf{Tugas Harian tanggal 18/02/2019}
 \begin{enumerate}
 \item Memperhatikan tingkat 3 presentasi
 \item Mengoreksi laporan tingkat 3 yang presentasi
 \item Memeriksa revisian tutorial class diagram adik tingkat
 \end{enumerate}
 
-\textbf{Tugas Harian tanggal 25/02/2019}
+\item \textbf{Tugas Harian tanggal 25/02/2019}
 \begin{enumerate}
 \item Masuk Kelas Pemrograman III
 \item Menginstal python, anaconda
@@ -91,8 +91,7 @@
 \item Menjaga peralatan yang ada di IRC  
 \end{enumerate}
 
-
-\textbf{Tugas Harian tanggal 26/02/2019}
+\item \textbf{Tugas Harian tanggal 26/02/2019}
 \begin{enumerate}
 \item Masuk kelas Kecerdasan Buatan
 \item Membuat repository tugas kecerdasan buatan kelas 3c
@@ -100,7 +99,38 @@
 \item Menambah materi GIS 2019, commit d97e9474087a3faca296fef82e9e7503345ac45e
 \end{enumerate}
 
-Tugas Harian tanggal 27/02/2019
+\textbf{Dedikasi}
+\begin{enumerate}
+\item Menambah materi GIS 2019, commit d97e9474087a3faca296fef82e9e7503345ac45e
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Masuk kelas Kecerdasan Buatan
+\item Membuat repository tugas kecerdasan buatan kelas 3c
+\item Menginput nilai tugas Pemrograman III kelas 2b
+\item Menambah materi GIS 2019, commit d97e9474087a3faca296fef82e9e7503345ac45e
+\end{enumerate}
+
+\textbf{Integritas}
+\begin{enumerate}
+\item able to merge/has no conflict
+\end{enumerate}
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 08.40
+\item Jam Keluar : 15.30
+\end{enumerate}
+
+\textbf{Loyalitas}
+\begin{enumerate}
+\item Mengecek AC saat datang dan pulang dari IRC
+\item Merapihkan kursi saat pulang dari IRC
+\item Menjaga peralatan yang ada di IRC
+\end{enumerate}
+
+\item \textbf{Tugas Harian tanggal 27/02/2019}
 \begin{enumerate}
 \item Mangecek tugas kecerdasan buatan kelas 3c
 \item Menginput nilai tugas kecerdasan buatan kelas 3c
@@ -138,14 +168,13 @@ Tugas Harian tanggal 27/02/2019
 \end{enumerate}
 
 \textbf{Loyalitas}
-Keterangan
 \begin{enumerate}
 \item Mengecek AC saat datang dan pulang dari IRC
 \item Merapihkan kursi saat pulang dari IRC
 \item Menjaga peralatan yang ada di IRC
 \end{enumerate}
 
-\textbf{Tugas Harian tanggal 27/02/2019}
+\item \textbf{Tugas Harian tanggal 27/02/2019}
 \begin{enumerate}
 \item Mangecek tugas kecerdasan buatan kelas 3c (Andi Muh Aslam 1164064 dan Aip Suprapto Munari 1164063)
 \item Menginput nilai tugas kecerdasan buatan kelas 3c (Andi Muh Aslam 1164064 dan Aip Suprapto Munari 1164063)
@@ -159,7 +188,6 @@ Keterangan
 \end{enumerate}
 
 \textbf{Produktifitas}
-
 \begin{enumerate}
 \item Mangecek tugas kecerdasan buatan kelas 3c (Andi Muh Aslam 1164064 dan Aip Suprapto Munari 1164063)
 \item Menginput nilai tugas kecerdasan buatan kelas 3c (Andi Muh Aslam 1164064 dan Aip Suprapto Munari 1164063)
@@ -186,7 +214,7 @@ Keterangan
 \end{enumerate}
 
 
-\textbf{Tugas Harian tanggal 28/02/2019}
+\item \textbf{Tugas Harian tanggal 28/02/2019}
 \begin{enumerate}
 \item Evaluasi mingguan dengan Pak Rolly Maulana Awangga
 \item Menilai hasil UAS kelas 1C, 3A dan 3C
@@ -229,22 +257,7 @@ Keterangan
 \item Mengatur ulang ruang IRC 
 \end{enumerate}
 
-\textbf{Tugas Harian tanggal 01/03/2019}
-
-\textbf{Disiplin}
-\begin{enumerate}
-\item Jam Masuk : 08.40
-\item Jam Keluar : 17.30
-\end{enumerate}
-
-\textbf{Loyalitas}
-\begin{enumerate}
-\item Mengecek AC saat datang dan pulang dari IRC
-\item Menjaga peralatan yang ada di IRC
-\item Merapihkan kursi yang ada di IRC
-\end{enumerate}
-
-\textbf{Tugas Harian tanggal 02/03/2019}
+\item \textbf{Tugas Harian tanggal 01/03/2019}
 \begin{enumerate} 
 \item Melakukan pre test TOEFL 
 \item Memberi tahu kelas 3B untuk mencantumkan sitasi dan sumber di daftar pustaka mengenai materi GIS
@@ -286,7 +299,62 @@ Keterangan
 \item Membersihkan lemari buku 
 \end{enumerate}
 
-\section{Score Mingguan dari tanggal 25/02/2019 sampai 02/03/2019}
+\item \textbf{Tugas Harian tanggal 04/03/2019}
+\begin{enumerate}
+\item Menambah gambar dan materi mengenai sumber sumber data geospasial \#17
+\item Masuk kelas Pemrograman 3 
+\item Diskusi mengenai INTERNSHIP II bersama Bapak Rolly Maulana Awangga
+\item Membuat orgnanisasi INTERNSHIPD4TI di github
+\item Kontribusi pada repository PPK (template \#1, merapihkan dan menambah contoh laporan harian dan mingguan \#8)
+\item Menambah materi deep learning computer vision \#3
+\item Membersihkan meja pribadi
+\item Membersihkan area sidang 
+\end{enumerate}
+
+\textbf{Dedikasi}
+\begin{enumerate}
+\item Menambah gambar dan materi mengenai sumber sumber data geospasial \#17
+\item Kontribusi pada repository PPK (template \#1, merapihkan dan menambah contoh laporan harian dan mingguan \#8)
+\item Menambah materi deep learning computer vision \#3
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Menambah gambar dan materi mengenai sumber sumber data geospasial \#17
+\item Masuk kelas Pemrograman 3 
+\item Diskusi mengenai INTERNSHIP II bersama Bapak Rolly Maulana Awangga
+\item Membuat orgnanisasi INTERNSHIPD4TI di github
+\item Kontribusi pada repository PPK (template \#1, merapihkan dan menambah contoh laporan harian dan mingguan \#8)
+\item Menambah materi deep learning computer vision \#3
+\item Membersihkan meja pribadi
+\item Menyapu dan merapihkan area sidang 
+\end{enumerate}
+
+\textbf{Integritas}
+\begin{enumerate}
+\item able to merge/has no conflict
+\end{enumerate}
+
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 08.40
+\item Jam Keluar : 17.40
+\end{enumerate}
+
+
+\textbf{Loyalitas}
+\begin{enumerate}
+\item Mengecek AC saat datang dan pulang dari IRC
+\item Menjaga peralatan yang ada di IRC
+\item Merapihkan kursi setelah pulamg dari IRC
+\item Mengelap meja pribadi
+\item Menyapu dan merapihkan area sidang IRC
+\item Membersihkan meja pribadi
+\end{enumerate}
+\end{enumerate}
+
+\section{Score Mingguan dari tanggal 25/02/2019 sampai 01/03/2019}
 Total score mingguan adalah 15 keterangan seperti pada Tabel \ref{table:scoremingguan}.
 \begin{table}[!ht]
 \centering
@@ -308,5 +376,6 @@ Loyalitas & 3 \\
 \caption{Tabel Score Mingguan}
 \label{table:scoremingguan}
 \end{table}
+
 
 
