update tg 4 bukuharian

--- a/section/chapter3.tex
+++ b/section/chapter3.tex
@@ -1,4 +1,6 @@
 \chapter{Faizal Mutakin/1144078}
+
+
 \begin{table}[h]
 \caption{Tabel Kegiatan Harian IRC}
 \centering
@@ -61,4 +63,24 @@ Loyalitas & -\\
 \end{tabular}
 \end{center}
 \label {Tabel:contoh} 
+\end{table}
+
+\begin{table}[h]
+\caption{Tabel Kegiatan Harian minggu ke2 IRC}
+\centering
+\begin{tabular}{|c|c|l|}
+\hline
+No&Tanggal&Kegiatan\\
+\hline
+1.&\multirow{2}{*}{04-03-2019}
+&DEDIKASI :Pull request aplikasi of mesin learning\#1\\
+		&&pull request di PPK\#9 \\
+&&PRODUKTIF :Diskusi repository untuk internship 2 dan TA\\
+		     &&Masuk kelas pemrograman III 2B\\
+&&INTEGRITAS : Able to marge atau has no conflict\\
+&&DISIPLIN : Jam Datang 8.40 Jam Pulang 17:30\\
+&&LOYALITAS :Merapihkan dan membersihkan tempat di IRC\\
+\hline
+\end{tabular}
+\label{table:contoh}
 \end{table}
