--- a/section/chapter5.tex
+++ b/section/chapter5.tex
@@ -1,52 +1,105 @@
 \chapter{Rahmatul Ridha/1144124}
+\section{Laporan Kegiatan Harian Minggu ke 1}
 
-\begin{table}[h]
-\caption{Tabel Kegiatan Harian}
-\centering
-\begin{tabular}{|c|c|c|}
+\begin{table}[]
+\caption{Laporan Kegiatan Harian pada tanggal 25-02-2019}
+\begin{tabular}{|c|l|l|}
 \hline
-No&Tanggal&Kegiatan\\
-\hline
-1.&\multirow{2}{*}{25-02-2019}&1) Membuat Repositori Pratikum.\\
-&&2) Menginstal python, pip, anaconda.\\
-\hline
-2.&\multirow{2}{*}{26-02-2019}&1) Mengikuti kelas Kecerdasan Buatan.\\
-&&2) Membuat Repositori untuk Kelas kecerdasan Buatan.\\
-\hline
-3.&\multirow{2}{*}{27-02-2019}&1)Menginput nilai tugas Kecerdasan Buatan kelas 3C.\\
-&&2)Membimbing anak tingkat 3 dalam mengerjakan tugas kecerdasan buatan.\\
-\hline
-4.&\multirow{3}{*}{28-02-2019}&1.Evaluasi Mingguan di Prodi.\\
-&&2.Memeriksa lembar jawaban uas kelas 3c (Sistem Informasi Geografis).\\
-&&3.Menginputkan nilai tugas harian kecerdasan buatan kelas 3c.\\
-\hline
+No & \multicolumn{1}{c|}{Kategori} & \multicolumn{1}{c|}{Keterangan} \\ \hline
+1  & Dedikasi                      &   -   \\ \hline
+2  & Produktif                     & \begin{tabular}[c]{@{}l@{}}1. Masuk kelas Pemrograman III dikelas 2a.\\ 2. Membuat repositori Praktikum.\\ 3. Menginstal Python, pip, dan Anaconda.\end{tabular} \\ \hline
+3  & Integritas                    & Able to Merge/has no conflik \\ \hline
+4  & Disiplin                      & \begin{tabular}[c]{@{}l@{}}Masuk jam : 07.30\\ Pulang jam : 16.45\end{tabular} \\ \hline
+5  & Loyalitas                     & Merapikan meja kerja sebelum pulang. \\ \hline
 \end{tabular}
-\label{table:contoh}
+\label{tabelharian1}
+\end{table}
+
+\begin{table}[]
+\caption{Laporan Kegiatan Harian pada tanggal 26-02-2019}
+\begin{tabular}{|c|l|l|}
+\hline
+No & \multicolumn{1}{c|}{Kategori} & \multicolumn{1}{c|}{Keterangan} \\ \hline
+1  & Dedikasi                      &   -   \\ \hline
+2  & Produktif                     & \begin{tabular}[c]{@{}l@{}}1. Mengikuti kelas Kecerdasan Buatan di kelas 3c.\\ 2. Membuat repositori untuk kelas Kecerdasan Buatan.\end{tabular} \\ \hline
+3  & Integritas                    & Able to Merge/has no conflik \\ \hline
+4  & Disiplin                      & \begin{tabular}[c]{@{}l@{}}Masuk jam :08.50 \\ Pulang jam : 16.45\end{tabular} \\ \hline
+5  & Loyalitas                     & Merapikan meja kerja sebelum pulang. \\ \hline
+\end{tabular}
+\label{tabelharian2}
+\end{table}
+
+\begin{table}[]
+\caption{Laporan Kegiatan Harian pada tanggal 27-02-2019}
+\begin{tabular}{|c|l|l|}
+\hline
+No & \multicolumn{1}{c|}{Kategori} & \multicolumn{1}{c|}{Keterangan} \\ \hline
+1  & Dedikasi                      &   -   \\ \hline
+2  & Produktif                     & \begin{tabular}[c]{@{}l@{}}1. Menginputkan nilai tugas kecerdasan buatan kelas 3c.\\ 2. Membimbing tingkat 3 dalam mengerjakan tugas kecerdasan buatan.\end{tabular} \\ \hline
+3  & Integritas                    & Able to Merge/has no conflik \\ \hline
+4  & Disiplin                      & \begin{tabular}[c]{@{}l@{}}Masuk jam : 10.15 (karena ada kelas pagi)\\ Pulang jam : 17.15\end{tabular} \\ \hline
+5  & Loyalitas                     & Merapikan meja kerja sebelum pulang. \\ \hline
+\end{tabular}
+\label{tabelharian3}
+\end{table}
+
+\begin{table}[]
+\caption{Laporan Kegiatan Harian pada tanggal 28-02-2019}
+\begin{tabular}{|c|l|l|}
+\hline
+No & \multicolumn{1}{c|}{Kategori} & \multicolumn{1}{c|}{Keterangan} \\ \hline
+1  & Dedikasi                      & Flask\#11  \\ \hline
+2  & Produktif                     & \begin{tabular}[c]{@{}l@{}}1. Evaluasi Mingguan diProdi.\\ 2. Memeriksa lembar jawaban uas kelas 3c.\\ 3. Menginputkan nilai tugas harian Kecerdasan Buatan.\end{tabular} \\ \hline
+3  & Integritas                    & Able to Merge/has no conflik \\ \hline
+4  & Disiplin                      & \begin{tabular}[c]{@{}l@{}}Masuk jam : 08.55 \\ Pulang jam : 17.25\end{tabular} \\ \hline
+5  & Loyalitas                     & Merapikan meja kerja sebelum pulang. \\ \hline
+\end{tabular}
+\label{tabelharian4}
+\end{table}
+
+\begin{table}[]
+\caption{Laporan Kegiatan Harian pada tanggal 01-03-2019}
+\begin{tabular}{|c|l|l|}
+\hline
+No & \multicolumn{1}{c|}{Kategori} & \multicolumn{1}{c|}{Keterangan} \\ \hline
+1  & Dedikasi                      & Flask\#13  \\ \hline
+2  & Produktif                     & \begin{tabular}[c]{@{}l@{}}1. Mengerjakan test Toefl.\\ 2. Merincikan dan merapikan data untuk laporan harian \\ pada latex.\\ 3.Sosialisasi Internship II diaudiotorium.\end{tabular} \\ \hline
+3  & Integritas                    & Able to Merge/has no conflik \\ \hline
+4  & Disiplin                      & \begin{tabular}[c]{@{}l@{}}Masuk jam : 09.00 \\ Pulang jam : 17.15\end{tabular} \\ \hline
+5  & Loyalitas                     & \begin{tabular}[c]{@{}l@{}}Merapikan meja kerja, merapikan dan membersihkan \\ lemari buku.\end{tabular} \\ \hline
+\end{tabular}
+\label{tabelharian5}
+\end{table}
+
+\begin{table}[]
+\caption{Laporan Minggu Ke-1}
+\begin{tabular}{|c|l|l|}
+\hline
+No & \multicolumn{1}{c|}{Kategori} & \multicolumn{1}{c|}{Skor} \\ \hline
+1  & Dedikasi                      & 1                         \\ \hline
+2  & Produktifitas                 & 3                         \\ \hline
+3  & Integritas                    & 3                         \\ \hline
+4  & Disiplin                      & 3                         \\ \hline
+5  & Loyalitas                     & 3                         \\ \hline
+\multicolumn{2}{|l|}{Total}        & 13                        \\ \hline
+\end{tabular}
+\label{tabelharian6}
 \end{table}
 
 
+\section{Laporan Kegiatan Harian Minggu ke 2}
+
 \begin{table}[]
-\caption{Tabel Kegiatan Harian}
-\centering
-\begin{tabular}{|l|l|l|}
+\caption{Laporan Kegiatan Harian pada tanggal 04-03-2019}
+\begin{tabular}{|c|l|l|}
 \hline
-\textbf{Tanggal} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}}\\ \hline
-28/02/2019 & Dedikasi & 2019\#25, Flask\#11\\ \hline
- & Produktif & 1. Evaluasi Mingguan diProdi. \\ 
- & & 2. Memeriksa lembar jawaban uas kelas 3c. \\ 
- & & 3. Menginputkan nilai tugas harian Kecerdasan Buatan \\ 
- & Integritas & Able to Merge\\ 
- & Disiplin & Masuk jam : 08.55\\ 
- & & Pulang jam : 17.25 \\ 
- & Loyalitas & Merapikan meja kerja sebelum pulang\\ \hline
-01/03/2019 & Dedikasi & Flask\#13\\ \hline
- & Produktif & 1. Mengerjakan test Toefl. \\ 
- & & \begin{tabular}[c]{@{}l@{}}2. Merincikan dan merapikan data untuk \\ laporan harian pada latex.\end{tabular} \\ 
- & & 3. Sosialisasi Internship II di Audiotorium.\\ 
- & Integritas & Able to Merge\\ 
- & Disiplin & Masuk jam : 09.05\\ 
- & & Pulang jam : 17.15\\ 
- & Loyalitas & \begin{tabular}[c]{@{}l@{}}Merapikan meja kerja, merapikan dan membersihkan \\ lemari buku.\end{tabular} \\ \hline
+No & \multicolumn{1}{c|}{Kategori} & \multicolumn{1}{c|}{Keterangan} \\ \hline
+1  & Dedikasi                      & Flask\#15  \\ \hline
+2  & Produktif                     & Masuk eklas Pemrograman III dikelas 2a. \\ \hline
+3  & Integritas                    & Able to Merge/has no conflik \\ \hline
+4  & Disiplin                      & \begin{tabular}[c]{@{}l@{}}Masuk jam : 07.10 \\ Pulang jam : 17.45\end{tabular} \\ \hline
+5  & Loyalitas                     & Merapikan mmeja kerja sebelum pulang. \\ \hline
 \end{tabular}
+\label{tabelharian7}
 \end{table}
 
