menambah tugas harian

--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -307,6 +307,7 @@
 \item Membuat orgnanisasi INTERNSHIPD4TI di github
 \item Kontribusi pada repository PPK (template \#1, merapihkan dan menambah contoh laporan harian dan mingguan \#8)
 \item Menambah materi deep learning computer vision \#3
+\item Menilai presentasi Rizal Ramadhan D4 TI 1c 
 \item Membersihkan meja pribadi
 \item Membersihkan area sidang 
 \end{enumerate}
@@ -326,6 +327,7 @@
 \item Membuat orgnanisasi INTERNSHIPD4TI di github
 \item Kontribusi pada repository PPK (template \#1, merapihkan dan menambah contoh laporan harian dan mingguan \#8)
 \item Menambah materi deep learning computer vision \#3
+\item Menilai presentasi Rizal Ramadhan D4 TI 1c 
 \item Membersihkan meja pribadi
 \item Menyapu dan merapihkan area sidang 
 \end{enumerate}
@@ -339,6 +341,55 @@
 \textbf{Disiplin}
 \begin{enumerate}
 \item Jam Masuk : 08.40
+\item Jam Keluar : 17.40
+\end{enumerate}
+
+
+\textbf{Loyalitas}
+\begin{enumerate}
+\item Mengecek AC saat datang dan pulang dari IRC
+\item Menjaga peralatan yang ada di IRC
+\item Merapihkan kursi setelah pulamg dari IRC
+\item Mengelap meja pribadi
+\item Menyapu dan merapihkan area sidang IRC
+\item Membersihkan meja pribadi
+\end{enumerate}
+
+\item \textbf{Tugas Harian tanggal 05/03/2019}
+\begin{enumerate}
+\item Masuk kelas Kecerdasan Buatan 
+\item Merapihkan Panduan Peningkatan Kompetensi(merapihkan \#10)
+\item Menambah gambar untuk materi sumber-sumber data geospasial, menambah materi mengenai pengenalan sistem informasi geografis \#18
+\item Memeriksa dan memerge praktek Pemrograman III kelas 2B(Faisal Najib Abdullah 1174042, Muhammad Iqbal Panggabean 1174063, Hagan Rowlenstino 1174040, Luthfi Muhammad Nabil 1174035, Irvan Rizkiansyah 1174043, Dika Sukma Pradana 1174050, Fathir (conflict), Yusniar Nur Syarif Sidiq 1164089, Ichsan Hizman Hardy 1174034, Alit Fajar Kurniawan 1174057, Kevin Natanael Nainggolan 1174059, Mhd Zulfikar Akram Nasution 1164081(conflict), Muhammad Afra Faris 1174041 (telat meresolve conflict), Rangga Putra Ramdhani 1174056(conflict))
+\item Menyapu area sidang IRC
+\item Membeersihkan meja kerja 
+\end{enumerate}
+
+\textbf{Dedikasi}
+\begin{enumerate}
+\item Merapihkan Panduan Peningkatan Kompetensi(merapihkan \#10)
+\item Menambah gambar untuk materi sumber-sumber data geospasial, menambah materi mengenai pengenalan sistem informasi geografis \#18
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Masuk kelas Kecerdasan Buatan 
+\item Merapihkan Panduan Peningkatan Kompetensi(merapihkan \#10)
+\item Menambah gambar untuk materi sumber-sumber data geospasial, menambah materi mengenai pengenalan sistem informasi geografis \#18
+\item Memeriksa dan memerge praktek Pemrograman III kelas 2B(Faisal Najib Abdullah 1174042, Muhammad Iqbal Panggabean 1174063, Hagan Rowlenstino 1174040, Luthfi Muhammad Nabil 1174035, Irvan Rizkiansyah 1174043, Dika Sukma Pradana 1174050, Fathir (conflict), Yusniar Nur Syarif Sidiq 1164089, Ichsan Hizman Hardy 1174034, Alit Fajar Kurniawan 1174057, Kevin Natanael Nainggolan 1174059, Mhd Zulfikar Akram Nasution 1164081(conflict), Muhammad Afra Faris 1174041 (telat meresolve conflict), Rangga Putra Ramdhani 1174056(conflict))
+\item Menyapu area sidang IRC
+\item Membeersihkan meja kerja 
+\end{enumerate}
+
+\textbf{Integritas}
+\begin{enumerate}
+\item able to merge/has no conflict
+\end{enumerate}
+
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 08.30
 \item Jam Keluar : 17.40
 \end{enumerate}
 
