--- a/section/chapter6.tex
+++ b/section/chapter6.tex
@@ -107,15 +107,30 @@
 \textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
 1 & Dedikasi & BukuInformatika/flask \#14 \\ \hline
 2 & Produktifitas & a. Diskusi Modul PPK dan teknis Github untuk Internship II\\
- &  & b. Mengkoordinasi pengumpulan Tugas Resume Buku GIS kelas 3B dan 3C. \\
- &  & c. Menambahkan informasi di BukuInformatika/PPK \#3 dan \#6. \\ \hline
+ &  & b. Mengkoordinasi pengumpulan Tugas Resume Buku GIS kelas 3B dan 3C. \\ \hline
 3 & Integritas & able to merge/has no conflict \\ \hline
 4 & Disiplin & Jam Datang : 08.45 WIB \\
- &  & Jam Pulang : 17.00 WIB \\ \hline
-5 & Loyalitas & \begin{tabular}[c]{@{}l@{}}Menyapu, membersihkan dan merapihkan meja,\\ juga mengecek AC di pagi dan sore hari.\end{tabular} \\ \hline
+ &  & Jam Pulang : 17.55 WIB \\ \hline
+5 & Loyalitas & \begin{tabular}[c]{@{}l@{}}Menyapu, membersihkan dan merapihkan meja,\\ mencuci gelas, mengelap kaca pintu, juga\\mengecek AC di pagi dan sore hari.\end{tabular} \\ \hline
 \end{tabular}
 \end{table}
 
+\begin{table}[]
+\caption{Laporan Harian Tanggal 5 Maret 2019}
+\label{tab:lh050319}
+\begin{tabular}{|l|l|l|}
+\hline
+\textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
+1 & Dedikasi & BukuInformatika/PPK \#3 dan \#6 \\ \hline
+2 & Produktifitas & \begin{tabular}[c]{@{}l@{}}a. Membimbing Fadila, Lusia, dan Rahmi pada mata kuliah\\Kecerdasan Buatan.\end{tabular} \\
+ &  & \begin{tabular}[c]{@{}l@{}}b. Melakukan penilaian tugas kedua mata kuliah Pemrograman III\\di kelas 2A.\end{tabular} \\
+ &  & \begin{tabular}[c]{@{}l@{}}c. Menerima pengaduan dari anak kelas 2c dan 2a serta memberikan\\solusi terkait masalah yang disampaikan.\end{tabular} \\ \hline
+3 & Integritas & able to merge/has no conflict \\ \hline
+4 & Disiplin & Jam Datang : 07.31 WIB \\
+ &  & Jam Pulang : 16.55 WIB \\ \hline
+5 & Loyalitas & \begin{tabular}[c]{@{}l@{}}Menyapu, membersihkan dan merapihkan meja,\\ juga mengecek AC di pagi dan sore hari.\end{tabular} \\ \hline
+\end{tabular}
+\end{table}
 
 \section{Penilaian Mingguan}
 
