update laporan harian

--- a/section/chapter5.tex
+++ b/section/chapter5.tex
@@ -103,3 +103,18 @@ No & \multicolumn{1}{c|}{Kategori} & \multicolumn{1}{c|}{Keterangan} \\ \hline
 \label{tabelharian7}
 \end{table}
 
+\begin{table}[]
+\caption{Laporan Kegiatan Harian pada tanggal 05-03-2019}
+\begin{tabular}{|c|l|l|}
+\hline
+No & \multicolumn{1}{c|}{Kategori} & \multicolumn{1}{c|}{Keterangan} \\ \hline
+1  & Dedikasi                      &  \\ \hline
+2  & Produktif                     &  \begin{tabular}[c]{@{}l@{}}1. Masuk kekelas 3c untuk mengikuti perkuliahan kecerdasan buatan.\\ 2. Menilai dan menginputan nilai pemrograman III.\end{tabular} \\ \hline
+3  & Integritas                    & Able to Merge/has no conflik \\ \hline
+4  & Disiplin                      & \begin{tabular}[c]{@{}l@{}}Masuk jam : 09.03 \\ Pulang jam : 16.10 \end{tabular} \\ \hline
+5  & Loyalitas                     & \begin{tabular}[c]{@{}l@{}}Merapikan meja kerja, merapikan dan membersihkan \\ lemari buku.\end{tabular} \\ \hline
+\end{tabular}
+\label{tabelharian8}
+\end{table}
+
+
