--- a/main.tex
+++ b/main.tex
@@ -4,6 +4,7 @@
 
 %load any additional packages
 \usepackage{amssymb}
+\usepackage{tabularx}
 \usepackage{multirow}
 \usepackage{graphicx}
 \usepackage[normalem]{ulem}
