--- a/section/chapter3.tex
+++ b/section/chapter3.tex
@@ -81,6 +81,14 @@ No&Tanggal&Kegiatan\\
 &&DISIPLIN : Jam Datang 8.40 Jam Pulang 17:30\\
 &&LOYALITAS :Merapihkan dan membersihkan tempat di IRC\\
 \hline
+2.&\multirow{2}{*}{05-03-2019}
+&DEDIKASI :Pull request GIS2019\#19\\
+&&PRODUKTIF :menilai hasil pull request Pemrograman III 2B\\
+		     &&Masuk kelas kecerdasan buatan III 3C\\
+&&INTEGRITAS : Able to marge atau has no conflict\\
+&&DISIPLIN : Jam Datang 8.40 Jam Pulang 17:00\\
+&&LOYALITAS :Cuci gelas minum sendiri dan membersihkan tempat di IRC\\
+\hline
 \end{tabular}
 \label{table:contoh}
 \end{table}
