menambah tugas harian

--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -405,6 +405,55 @@
 \item Menyapu dan merapihkan area sidang IRC
 \item Membersihkan meja pribadi
 \end{enumerate}
+
+\item \textbf{Tugas Harian tanggal 06/03/2019}
+\begin{enumerate}
+\item Menambah materi mengenai pengertian GIS menurut para ahli \#20
+\item Memeriksa tugas kecerdasan buatan kelas 3c (Andi Muh Aslam 1164064 dan Aip Suprapto Munari 1164063) bagian pertama untuk chapter 2
+\item Memeriksa jurnal Eko Cahyono Putro dan Nur Arkhamia Batubara kelas D4 TI 33B
+\item Menginput nilai kecerdasan buatan kelas 3c (Andi Muh Aslam 1164064 dan Aip Suprapto Munari 1164063) bagian pertama untuk chapter 2
+\item Membersihkan dan merapihkan area sidang IRC
+\item Menyapu area sidang IRC
+\item Merapihkan kursi di area sidang IRC
+\end{enumerate}
+
+\textbf{Dedikasi}
+\begin{enumerate}
+\item Menambah materi mengenai pengertian GIS menurut para ahli \#20
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Menambah materi mengenai pengertian GIS menurut para ahli \#20
+\item Memeriksa tugas kecerdasan buatan kelas 3c (Andi Muh Aslam 1164064 dan Aip Suprapto Munari 1164063) bagian pertama
+\item Memeriksa jurnal Eko Cahyono Putro dan Nur Arkhamia Batubara kelas D4 TI 33B
+\item Menginput nilai kecerdasan buatan kelas 3c (Andi Muh Aslam 1164064 dan Aip Suprapto Munari 1164063)
+\item Membersihkan dan merapihkan area sidang IRC
+\item Menyapu area sidang IRC
+\item Merapihkan kursi di area sidang IRC
+\end{enumerate}
+
+\textbf{Integritas}
+\begin{enumerate}
+\item able to merge/has no conflict
+\end{enumerate}
+
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 08.30
+\item Jam Keluar : 18.00
+\end{enumerate}
+
+
+\textbf{Loyalitas}
+\begin{enumerate}
+\item Mengecek AC saat datang dan pulang dari IRC
+\item Menjaga peralatan yang ada di IRC
+\item Merapihkan kursi setelah pulamg dari IRC
+\item Menyapu dan membersihkan area sidang IRC
+\item Membersihkan meja pribadi
+\end{enumerate}
 \end{enumerate}
 
 \section{Score Mingguan dari tanggal 25/02/2019 sampai 01/03/2019}
