--- a/section/chapter6.tex
+++ b/section/chapter6.tex
@@ -118,10 +118,11 @@
 \begin{tabular}{|l|l|l|}
 \hline
 \textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
-1 & Dedikasi & BukuInformatika/PPK \#3 dan \#6 \\ \hline
+1 & Dedikasi & \\ \hline
 2 & Produktifitas & \begin{tabular}[c]{@{}l@{}}a. Membimbing Fadila, Lusia, dan Rahmi pada mata kuliah\\Kecerdasan Buatan.\end{tabular} \\
  &  & \begin{tabular}[c]{@{}l@{}}b. Melakukan penilaian tugas kedua mata kuliah Pemrograman III\\di kelas 2A.\end{tabular} \\
  &  & \begin{tabular}[c]{@{}l@{}}c. Menerima pengaduan dari anak kelas 2c dan 2a serta memberikan\\solusi terkait masalah yang disampaikan.\end{tabular} \\ \hline
+ &  &  BukuInformatika/PPK \#3 dan \#6 \\hline
 3 & Integritas & able to merge/has no conflict \\ \hline
 4 & Disiplin & Jam Datang : 07.31 WIB \\
  &  & Jam Pulang : 16.55 WIB \\ \hline
@@ -146,6 +147,21 @@
 \end{tabular}
 \end{table}
 
+\begin{table}[htp]
+\caption{Laporan Harian Tanggal 8 Maret 2019}
+\label{tab:lh080319}
+\begin{tabular}{|l|l|l|}
+\hline
+\textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
+1 & Dedikasi & BukuInformatika/flask \#18 \\ \hline
+2 & Produktifitas & \begin{tabular}[c]{@{}l@{}}a. Menerima keluhan untuk penlaian Kecerdasan Buatan.\end{tabular} \\
+ &  & \begin{tabular}[c]{@{}l@{}}b. Memngkoordinir mahasiswa untuk tugas kontribusi buku GIS\\oleh Rahmi, Lusia, dan Tomy.\end{tabular} \\
+3 & Integritas & able to merge/has no conflict \\ \hline
+4 & Disiplin & Jam Datang : 08.50 WIB \\
+ &  & Jam Pulang : 15.45 WIB \\ \hline
+5 & Loyalitas & \begin{tabular}[c]{@{}l@{}}Menyapu, membersihkan dan merapihkan meja,\\ juga mengecek AC di pagi dan sore hari.\end{tabular} \\ \hline
+\end{tabular}
+\end{table}
 
 \section{Penilaian Mingguan}
 
@@ -176,12 +192,12 @@
 \begin{tabular}{|c|c|c|p{\textwidth}|}
 \hline
 \textbf{No} & \textbf{Kategori} & \textbf{Poin} \\ \hline
-1. & Dedikasi & 1 \\ \hline
-2. & Produktifitas & 1 \\ \hline
-3. & Integritas & 1 \\ \hline
-4. & Disiplin & 1 \\ \hline
-5. & Loyalitas & 1 \\ \hline
- & \textbf{Total Poin} & 5 \\ \hline
+1. & Dedikasi & 2 \\ \hline
+2. & Produktifitas & 3 \\ \hline
+3. & Integritas & 3 \\ \hline
+4. & Disiplin & 3 \\ \hline
+5. & Loyalitas & 3 \\ \hline
+ & \textbf{Total Poin} & 14 \\ \hline
 \end{tabular}
 \end{table}
 
