menambah tugas harian

--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -425,7 +425,7 @@
 \textbf{Produktifitas}
 \begin{enumerate}
 \item Menambah materi mengenai pengertian GIS menurut para ahli \#20
-\item Memeriksa tugas kecerdasan buatan kelas 3c (Andi Muh Aslam 1164064 dan Aip Suprapto Munari 1164063) bagian pertama
+\item Memeriksa tugas kecerdasan buatan kelas 3c (Andi Muh Aslam 1164064 dan Aip Suprapto Munari 1164063) bagian pertama pada chapter2
 \item Memeriksa jurnal Eko Cahyono Putro dan Nur Arkhamia Batubara kelas D4 TI 33B
 \item Menginput nilai kecerdasan buatan kelas 3c (Andi Muh Aslam 1164064 dan Aip Suprapto Munari 1164063)
 \item Membersihkan dan merapihkan area sidang IRC
@@ -443,6 +443,52 @@
 \begin{enumerate}
 \item Jam Masuk : 08.30
 \item Jam Keluar : 18.00
+\end{enumerate}
+
+
+\textbf{Loyalitas}
+\begin{enumerate}
+\item Mengecek AC saat datang dan pulang dari IRC
+\item Menjaga peralatan yang ada di IRC
+\item Merapihkan kursi setelah pulamg dari IRC
+\item Menyapu dan membersihkan area sidang IRC
+\item Membersihkan meja pribadi
+\end{enumerate}
+
+\item \textbf{Tugas Harian tanggal 08/03/2019}
+\begin{enumerate}
+\item Menambah materi mengenai pengenalan sistem informasi geografis \#21 pada repository GIS2019
+\item Menambah materi alat pendeteksi banjir \#10 pada pada repository IoT 
+\item Memeriksa tugas mata kuliah kecerdasan buatan kelas 3c (Andi Muh Aslam 1164064 dan Aip Suprapto Munari 1164063) bagian kedua pada chapter2
+\item Menyapu ruang IRC
+\item Membersihkan meja kerja pribadi di IRC
+\end{enumerate}
+
+\textbf{Dedikasi}
+\begin{enumerate}
+\item Menambah materi mengenai pengenalan sistem informasi geografis \#21 pada repository GIS2019
+\item Menambah materi alat pendeteksi banjir \#10 pada pada repository IoT 
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Menambah materi mengenai pengenalan sistem informasi geografis \#21 pada repository GIS2019
+\item Menambah materi alat pendeteksi banjir \#10 pada pada repository IoT 
+\item Memeriksa tugas mata kuliah kecerdasan buatan kelas 3c (Andi Muh Aslam 1164064 dan Aip Suprapto Munari 1164063) bagian kedua pada chapter2
+\item Menyapu ruang IRC
+\item Membersihkan meja kerja pribadi di IRC
+\end{enumerate}
+
+\textbf{Integritas}
+\begin{enumerate}
+\item able to merge/has no conflict
+\end{enumerate}
+
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 08.30
+\item Jam Keluar : 16.40
 \end{enumerate}
 
 
