--- a/section/chapter3.tex
+++ b/section/chapter3.tex
@@ -89,6 +89,20 @@ No&Tanggal&Kegiatan\\
 &&DISIPLIN : Jam Datang 8.40 Jam Pulang 17:00\\
 &&LOYALITAS :Cuci gelas minum sendiri dan membersihkan tempat di IRC\\
 \hline
+3.&\multirow{2}{*}{06-03-2019}
+&DEDIKASI :-\\
+&&PRODUKTIF :menilai hasil pull request kelas 3C\\
+&&INTEGRITAS : Able to marge atau has no conflict\\
+&&DISIPLIN : Jam Datang 8.40 Jam Pulang 16:00\\
+&&LOYALITAS :membersihkan tempat ruangan tanggung jawab di IRC\\
+\hline
+4.&\multirow{2}{*}{08-03-2019}
+&DEDIKASI :Pull request GIS2019\#22\\
+&&PRODUKTIF :diskusi untuk membuat github ke gitlab\\
+&&INTEGRITAS : Able to marge atau has no conflict\\
+&&DISIPLIN : Jam Datang 8.40 Jam Pulang 15:10\\
+&&LOYALITAS :membersihkan tempat di IRC\\
+\hline
 \end{tabular}
 \label{table:contoh}
 \end{table}
